Update projects spacing

--- a/index.html
+++ b/index.html
@@ -363,12 +363,11 @@
 			<!--Section title-->
 			<div class="secTitle">
 				<h1><i class="icon-globe"></i> projects</h1>
-
 			</div>
 			<!--End section title-->
 
 			<!--Holder 960-->
-			<div class="holder960 clearfix">
+			<div class="holder960 clearfix" style="margin-top: 50px;">
 
 				<!--Portfolio container-->
 				<div class="portfolioContainer">
