--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						<li><a href="#wrapper">home</a></li>
 						<li><a href="#about">about me</a></li>
 						<li><a href="#resume">resume</a></li>
-						<li><a href="#portfolio">portfolio</a></li>
+						<li><a href="#projects">Projects</a></li>
 						<li><a href="#contact">contact</a></li>
 						
 					</ul>
@@ -358,7 +358,7 @@
 		<!--End resume section-->
 
 		<!--Portfolio section-->
-		<section id="portfolio" class="clearfix section">
+		<section id="projects" class="clearfix section">
 
 			<!--Section title-->
 			<div class="secTitle">
