Fix spelling error

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 					<div class="skillsHolder clearfix top nBottom ">
 
 						<div class="textWidget column">
-							<h1>Get To Now Me</h1>
+							<h1>Get To Know Me</h1>
 							<p>By day, I'm a software developer focused on oil & gas accounting software and government financial systems.</p>
 							<p>By night, I advocate for game developers in Alberta.</p>
 							<p>&nbsp;</p>
