Update About Me section

--- a/index.html
+++ b/index.html
@@ -127,10 +127,13 @@
 							<div class="about-text">
 								<p>By day, I'm a software developer focused on oil & gas accounting software and government financial systems.</p>
 								<p>By night, I advocate for game developers in Alberta.</p>
+								<li>2012: Moved to Calgary</li>
 								<li>2013: Founded the Calgary Game Developers meetup group.</li>
-								<li>2015: Co-founded the Calgary Game Developers Association NPO becoming its first president. I currently sit as a board member.</li>
-								<li>2018: Founded Alberta Makes Games. A game development advocacy project.</li>
+								<li>2015: Co-founded the Calgary Game Developers Association NPO. Became its first president.</li>
+								<li>2018: Founded Alberta Makes Games (a game development advocacy project)</li>
 								<li>2019: Joined Interactive Arts Alberta as a board member.</li>
+								</br>
+								<li>2016-2020: Site organizer for Global Game Jam Calgary</li>
 								<div class="button-holder">
 									<a class="btn btn-shutter-out-horizontal" href="https://www.linkedin.com/in/craigpfau/" target="_blank">View my LinkedIn</a>
 								</div><!-- end button-holder -->
