Update Javscript calls

--- a/index.html
+++ b/index.html
@@ -383,10 +383,21 @@
 	<script src="js/jquery-3.4.1.min.js"></script>
 	<!-- Bootstrap Js -->
 	<script src="js/bootstrap.min.js"></script>
+	<!-- Circle Progress Js -->
+	<script src="js/circle-progress.js"></script>
 	<!-- Isotope Filtring Js -->
 	<script src="js/isotope.pkgd.min.js"></script>
+	<!-- Lightbox Js -->
+	<script src="js/lightbox.min.js"></script>
 	<!-- owl.carousel Js -->
 	<script src="js/owl.carousel.min.js"></script>
+	<!-- Form validator Js -->
+	<script src="js/validator.min.js"></script>
+	<!-- ajaxchimp Js -->
+	<script src="js/jquery.ajaxchimp.min.js"></script>
+	<!-- counterup Js -->
+	<script src="js/waypoint.js"></script>	
+	<script src="js/jquery.counterup.min.js"></script>
 	<!-- Template main Js -->
 	<script src="js/main.js"></script>
 	
