Revamp Brickheadz collection page

--- a/brickheadz/index.html
+++ b/brickheadz/index.html
@@ -47,14 +47,14 @@
 								</button>
 								<a class="navbar-brand" href="index.html">
 									<img class="logo logo-white" src="images/logo.png" alt="logo">
-									<img class="logo logo-color" src="images/logo-color.png" alt="logo">
+									<img class="logo logo-color" src="images/logo.png" alt="logo">
 								</a>
 							</div><!--End navbar-header -->
 							<div id="navbar" class="navbar-collapse collapse">
 								<ul class="nav navbar-nav navbar-right">
 									<li><a class="active" href="#about">About</a></li>
-									<li><a href="#data">Data</a></li>
 									<li><a class="last" href="#collection">My Collection</a></li>
+									<li><a href="#data">Data</a></li>
 								</ul>
 							</div><!--End navbar -->
 						</nav>
@@ -68,36 +68,19 @@
 	<!-- start About section -->
 	<section id="about" class="about about-timeline-style parallax">
 		<div class="container">
-			<div class="row" style="padding: 0 15px 30px 15px">
-				<div class="col-sm-12">
-					<!-- start section title-wrap -->
-					<div class="title-wrap">
-						<div class="section-title-box">
-							<h2 class="section-title">Brick<strong>Headz</strong></h2>
-						</div><!-- end section-title-box -->
-					</div>
-					<!-- end section title-wrap -->
-				</div><!-- end col -->
-				<div class="col-sm-12">
-					<div class="row">
-						<img src="images/profile/collection-jan-2020.jpg" alt="profile photo">
-					</div><!-- end row -->
-				</div><!-- end col-sm-12 -->
-			</div><!-- end row -->	
-			<div class="row">
+			<div class="row" style="padding: 30px 15px 30px 15px">
 				<div class="col-sm-6">
-					<img src="images/profile/hulkbuster.jpg" alt="profile photo">
+					<img src="images/profile/craig-brickheadz.png" alt="profile photo">
 				</div><!-- end col -->
 				<div class="col-sm-6">
 					<div class="about-text">
-						<p>Brickheadz combine three elements which make them my perfect collectible:</p>
+						<p>Hi! I'm Craig and I'm having a midlife crisis. As such I'm very into Lego right now, specifically Brickheadz. These little collectibles combine three elements that I love:</p>
 						<ul>
-							<li>low poly 3D models</li>
-							<li>nerdy pop culture characters</li>
-							<li>Lego! (this may be the extent of my mid-life crisis)</li>
+							<li>Low poly 3D models</li>
+							<li>Nerdy pop culture characters</li>
+							<li>Lego! (Everything is AWESOME!)</li>
 						</ul>
 						<p></p>
-						<p>My collection is primarily made up of Chinese knockoff LEGO MOCs purchased on AliExpress. This definitely keeps the cost down but also means about 3 months on average for delivery.</p>
 						<p>If you stumble upon this page and want to unload any models I don't have yet, please get in touch.</p>
 						<div class="button-holder">
 							<a class="btn btn-shutter-out-horizontal" href="mailto:craigpfau@gmail.com">Email</a>
@@ -105,71 +88,12 @@
 					</div><!-- about-text -->
 				</div><!-- end col -->
 			</div><!-- end row -->
-
 		</div><!-- end container -->  
 	</section>
 	<!-- end About section -->
 
-	<!-- start data -->
-	<section id="data" class="data parallax">
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-12">
-					<!-- start section title-wrap -->
-					<div class="title-wrap">
-						<div class="section-title-box">
-							<h2 class="section-title">By The <strong>Numbers</strong></h2>
-						</div><!-- end section-title-box -->
-					</div>
-					<!-- end section title-wrap -->
-				</div><!-- end col -->
-				<!-- BEGIN count Box -->
-				<div class="data-inner text-center">
-					<div class="col-xs-6 col-md-3">
-						<div class="counter-wrap">
-							<div class="counter-icon"><i class="fa fa-user"></i></div>
-							<div class="counter-text">
-								<div class="counter">128</div>
-								<p>FIGURES</p>
-							</div><!-- end counter-text -->
-						</div><!-- end counter-wrap -->
-					</div><!-- end col -->
-					<div class="col-xs-6 col-md-3">
-						<div class="counter-wrap">
-							<div class="counter-icon"><i class="fa fa-dollar"></i></div>
-							<div class="counter-text">
-								<div class="counter">1,033.96</div>
-								<p>CAD DOLLARS</p>
-							</div><!-- end counter-text -->
-						</div><!-- end counter-wrap -->
-					</div><!-- end col -->
-					<div class="col-xs-6 col-md-3">
-						<div class="counter-wrap">
-							<div class="counter-icon"><i class="fa fa-cubes"></i></div>
-							<div class="counter-text">
-								<div class="counter">17977</div>
-								<p>BRICKS</p>
-							</div><!-- end counter-text -->
-						</div><!-- end counter-wrap -->
-					</div><!-- end col -->
-					<div class="col-xs-6 col-md-3">
-						<div class="counter-wrap">
-							<div class="counter-icon"><i class="fa fa-tag"></i></div>
-							<div class="counter-text">
-								<div class="counter">0.06</div>
-								<p>COST PER BRICK</p>
-							</div><!-- end counter-text -->
-						</div><!-- end counter-wrap -->
-					</div><!-- end col --> 
-				</div><!-- end text-center --> 
-				<!-- END count Box -->	
-			</div><!-- end row --> 
-		</div><!-- end container --> 
-	</section>
-	<!--End #data -->
-
 	<!-- start collection -->
-	<section id="collection" class="filter-section collection-style2 parallax">
+	<section id="collection" class="filter-section collection-style2">
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-12">
@@ -180,8 +104,15 @@
 						</div><!-- end section-title-box -->
 					</div>
 					<!-- end section title-wrap -->
-				</div><!-- end col -->	
-				<div class="col-sm-12">
+				</div><!-- end col -->
+				<div class="row">
+					<div class="col-sm-12">
+						<div class="row">
+							<img src="images/profile/collection.png" alt="profile photo">
+						</div><!-- end row -->
+					</div><!-- end col-sm-12 -->
+				</div>	
+				<div class="col-sm-12" style="padding: 30px 15px 30px 15px">
 					<!-- start filter-container -->
 					<div class="filter-container isotopeFilters">
 						<ul class="list-inline filter">
@@ -1779,13 +1710,71 @@
 		</div><!--End container -->
 	</section>
 	<!-- end collection -->
+
+	<!-- start data -->
+	<section id="data" class="data parallax">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12">
+					<!-- start section title-wrap -->
+					<div class="title-wrap">
+						<div class="section-title-box">
+							<h2 class="section-title" style="color:#FFF">By The <strong>Numbers</strong></h2>
+						</div><!-- end section-title-box -->
+					</div>
+					<!-- end section title-wrap -->
+				</div><!-- end col -->
+				<!-- BEGIN count Box -->
+				<div class="data-inner text-center">
+					<div class="col-xs-6 col-md-3">
+						<div class="counter-wrap">
+							<div class="counter-icon"><i class="fa fa-user"></i></div>
+							<div class="counter-text">
+								<div class="counter">128</div>
+								<p>FIGURES</p>
+							</div><!-- end counter-text -->
+						</div><!-- end counter-wrap -->
+					</div><!-- end col -->
+					<div class="col-xs-6 col-md-3">
+						<div class="counter-wrap">
+							<div class="counter-icon"><i class="fa fa-dollar"></i></div>
+							<div class="counter-text">
+								<div class="counter">1,033.96</div>
+								<p>CAD DOLLARS</p>
+							</div><!-- end counter-text -->
+						</div><!-- end counter-wrap -->
+					</div><!-- end col -->
+					<div class="col-xs-6 col-md-3">
+						<div class="counter-wrap">
+							<div class="counter-icon"><i class="fa fa-cubes"></i></div>
+							<div class="counter-text">
+								<div class="counter">17977</div>
+								<p>BRICKS</p>
+							</div><!-- end counter-text -->
+						</div><!-- end counter-wrap -->
+					</div><!-- end col -->
+					<div class="col-xs-6 col-md-3">
+						<div class="counter-wrap">
+							<div class="counter-icon"><i class="fa fa-tag"></i></div>
+							<div class="counter-text">
+								<div class="counter">0.06</div>
+								<p>COST PER BRICK</p>
+							</div><!-- end counter-text -->
+						</div><!-- end counter-wrap -->
+					</div><!-- end col --> 
+				</div><!-- end text-center --> 
+				<!-- END count Box -->	
+			</div><!-- end row --> 
+		</div><!-- end container --> 
+	</section>
+	<!--End #data -->
 	
 	<!-- start footer -->
 	<footer id="footer" class="footer">
 		<div class="container">
 			<div class="row">					
 				<div class="col-sm-12">
-					<p class="text-center copyright">&copy; 2020 <a href="#" class="footer-site-link">Craig Pfau</a> All rights reserved.</p>
+					<p class="text-center copyright">&copy; 2021 <a href="#" class="footer-site-link">Craig Pfau</a> All rights reserved.</p>
 				</div><!-- end col --> 
 			</div><!-- end row --> 
 		</div><!-- end container --> 
