Add more Brickheadz

--- a/brickheadz/index.html
+++ b/brickheadz/index.html
@@ -1396,6 +1396,34 @@
 							</div>
 							<div class="col-md-2 col-xs-6 no-space isotopeSelector starwars">
 								<div class="collection-wrapper">
+									<img src="images/collection/125.jpg" alt="collection Title">									
+									<div class="collection-overlay">
+										<div class="collection-overlay-inner">
+											<div class="collection-overlay-content">
+												<div class="collection-caption">
+													<h3>The Child (Official)</h3>
+												</div><!--End collection-caption -->
+											</div><!--End collection-overlay-content -->
+										</div><!--End collection-overlay-inner -->
+									</div><!--End collection-overlay -->
+								</div><!--End collection-wrapper -->
+							</div>
+							<div class="col-md-2 col-xs-6 no-space isotopeSelector starwars">
+								<div class="collection-wrapper">
+									<img src="images/collection/126.jpg" alt="collection Title">									
+									<div class="collection-overlay">
+										<div class="collection-overlay-inner">
+											<div class="collection-overlay-content">
+												<div class="collection-caption">
+													<h3>The Mandalorian (Official)</h3>
+												</div><!--End collection-caption -->
+											</div><!--End collection-overlay-content -->
+										</div><!--End collection-overlay-inner -->
+									</div><!--End collection-overlay -->
+								</div><!--End collection-wrapper -->
+							</div>
+							<div class="col-md-2 col-xs-6 no-space isotopeSelector starwars">
+								<div class="collection-wrapper">
 									<img src="images/collection/119.jpg" alt="collection Title">									
 									<div class="collection-overlay">
 										<div class="collection-overlay-inner">
@@ -1492,7 +1520,6 @@
 									</div><!--End collection-overlay -->
 								</div><!--End collection-wrapper -->
 							</div>
-
 							<div class="col-md-2 col-xs-6 no-space isotopeSelector misc">
 								<div class="collection-wrapper">
 									<img src="images/collection/27.jpg" alt="collection Title">									
@@ -1501,6 +1528,34 @@
 											<div class="collection-overlay-content">
 												<div class="collection-caption">
 													<h3>Jack Sparrow</h3>
+												</div><!--End collection-caption -->
+											</div><!--End collection-overlay-content -->
+										</div><!--End collection-overlay-inner -->
+									</div><!--End collection-overlay -->
+								</div><!--End collection-wrapper -->
+							</div>
+							<div class="col-md-2 col-xs-6 no-space isotopeSelector misc">
+								<div class="collection-wrapper">
+									<img src="images/collection/123.jpg" alt="collection Title">									
+									<div class="collection-overlay">
+										<div class="collection-overlay-inner">
+											<div class="collection-overlay-content">
+												<div class="collection-caption">
+													<h3>Rick</h3>
+												</div><!--End collection-caption -->
+											</div><!--End collection-overlay-content -->
+										</div><!--End collection-overlay-inner -->
+									</div><!--End collection-overlay -->
+								</div><!--End collection-wrapper -->
+							</div>
+							<div class="col-md-2 col-xs-6 no-space isotopeSelector misc">
+								<div class="collection-wrapper">
+									<img src="images/collection/124.jpg" alt="collection Title">									
+									<div class="collection-overlay">
+										<div class="collection-overlay-inner">
+											<div class="collection-overlay-content">
+												<div class="collection-caption">
+													<h3>Morty</h3>
 												</div><!--End collection-caption -->
 											</div><!--End collection-overlay-content -->
 										</div><!--End collection-overlay-inner -->
@@ -1655,6 +1710,34 @@
 											<div class="collection-overlay-content">
 												<div class="collection-caption">
 													<h3>Chinese Spaceman</h3>
+												</div><!--End collection-caption -->
+											</div><!--End collection-overlay-content -->
+										</div><!--End collection-overlay-inner -->
+									</div><!--End collection-overlay -->
+								</div><!--End collection-wrapper -->
+							</div>
+							<div class="col-md-2 col-xs-6 no-space isotopeSelector misc">
+								<div class="collection-wrapper">
+									<img src="images/collection/127.jpg" alt="collection Title">									
+									<div class="collection-overlay">
+										<div class="collection-overlay-inner">
+											<div class="collection-overlay-content">
+												<div class="collection-caption">
+													<h3>Bride</h3>
+												</div><!--End collection-caption -->
+											</div><!--End collection-overlay-content -->
+										</div><!--End collection-overlay-inner -->
+									</div><!--End collection-overlay -->
+								</div><!--End collection-wrapper -->
+							</div>
+							<div class="col-md-2 col-xs-6 no-space isotopeSelector misc">
+								<div class="collection-wrapper">
+									<img src="images/collection/128.jpg" alt="collection Title">									
+									<div class="collection-overlay">
+										<div class="collection-overlay-inner">
+											<div class="collection-overlay-content">
+												<div class="collection-caption">
+													<h3>Groom</h3>
 												</div><!--End collection-caption -->
 											</div><!--End collection-overlay-content -->
 										</div><!--End collection-overlay-inner -->
