Update about section

--- a/index.html
+++ b/index.html
@@ -132,8 +132,9 @@
 								<li>2015: Co-founded the Calgary Game Developers Association NPO. Became its first president.</li>
 								<li>2018: Founded Alberta Makes Games (a game development advocacy project)</li>
 								<li>2019: Joined Interactive Arts Alberta as a board member.</li>
-								</br>
-								<li>2016-2020: Site organizer for Global Game Jam Calgary</li>
+								<li>2016-2020: Global Game Jam site organizer (Calgary).</li>
+								<li>2021: Global Game Jam regional organizer (Canada).</li>
+								<li>2021: Transferred the Alberta Makes Games website to Digital Alberta.</li>
 								<div class="button-holder">
 									<a class="btn btn-shutter-out-horizontal" href="https://www.linkedin.com/in/craigpfau/" target="_blank">View my LinkedIn</a>
 								</div><!-- end button-holder -->
