--- a/brickheadz/index.html
+++ b/brickheadz/index.html
@@ -1744,6 +1744,132 @@
 									</div><!--End collection-overlay -->
 								</div><!--End collection-wrapper -->
 							</div>
+							<div class="col-md-2 col-xs-6 no-space isotopeSelector marvel">
+								<div class="collection-wrapper">
+									<img src="images/collection/129.jpg" alt="collection Title">									
+									<div class="collection-overlay">
+										<div class="collection-overlay-inner">
+											<div class="collection-overlay-content">
+												<div class="collection-caption">
+													<h3>Venom</h3>
+												</div><!--End collection-caption -->
+											</div><!--End collection-overlay-content -->
+										</div><!--End collection-overlay-inner -->
+									</div><!--End collection-overlay -->
+								</div><!--End collection-wrapper -->
+							</div>
+							<div class="col-md-2 col-xs-6 no-space isotopeSelector misc">
+								<div class="collection-wrapper">
+									<img src="images/collection/130.jpg" alt="collection Title">									
+									<div class="collection-overlay">
+										<div class="collection-overlay-inner">
+											<div class="collection-overlay-content">
+												<div class="collection-caption">
+													<h3>Hannibal Lecter</h3>
+												</div><!--End collection-caption -->
+											</div><!--End collection-overlay-content -->
+										</div><!--End collection-overlay-inner -->
+									</div><!--End collection-overlay -->
+								</div><!--End collection-wrapper -->
+							</div>
+							<div class="col-md-2 col-xs-6 no-space isotopeSelector misc">
+								<div class="collection-wrapper">
+									<img src="images/collection/131.jpg" alt="collection Title">									
+									<div class="collection-overlay">
+										<div class="collection-overlay-inner">
+											<div class="collection-overlay-content">
+												<div class="collection-caption">
+													<h3>Freddy Krueger</h3>
+												</div><!--End collection-caption -->
+											</div><!--End collection-overlay-content -->
+										</div><!--End collection-overlay-inner -->
+									</div><!--End collection-overlay -->
+								</div><!--End collection-wrapper -->
+							</div>
+							<div class="col-md-2 col-xs-6 no-space isotopeSelector misc">
+								<div class="collection-wrapper">
+									<img src="images/collection/132.jpg" alt="collection Title">									
+									<div class="collection-overlay">
+										<div class="collection-overlay-inner">
+											<div class="collection-overlay-content">
+												<div class="collection-caption">
+													<h3>Marge Simpson</h3>
+												</div><!--End collection-caption -->
+											</div><!--End collection-overlay-content -->
+										</div><!--End collection-overlay-inner -->
+									</div><!--End collection-overlay -->
+								</div><!--End collection-wrapper -->
+							</div>
+							<div class="col-md-2 col-xs-6 no-space isotopeSelector misc">
+								<div class="collection-wrapper">
+									<img src="images/collection/133.jpg" alt="collection Title">									
+									<div class="collection-overlay">
+										<div class="collection-overlay-inner">
+											<div class="collection-overlay-content">
+												<div class="collection-caption">
+													<h3>Link</h3>
+												</div><!--End collection-caption -->
+											</div><!--End collection-overlay-content -->
+										</div><!--End collection-overlay-inner -->
+									</div><!--End collection-overlay -->
+								</div><!--End collection-wrapper -->
+							</div>
+							<div class="col-md-2 col-xs-6 no-space isotopeSelector starwars">
+								<div class="collection-wrapper">
+									<img src="images/collection/134.jpg" alt="collection Title">									
+									<div class="collection-overlay">
+										<div class="collection-overlay-inner">
+											<div class="collection-overlay-content">
+												<div class="collection-caption">
+													<h3>Storm Trooper</h3>
+												</div><!--End collection-caption -->
+											</div><!--End collection-overlay-content -->
+										</div><!--End collection-overlay-inner -->
+									</div><!--End collection-overlay -->
+								</div><!--End collection-wrapper -->
+							</div>
+							<div class="col-md-2 col-xs-6 no-space isotopeSelector marvel">
+								<div class="collection-wrapper">
+									<img src="images/collection/135.jpg" alt="collection Title">									
+									<div class="collection-overlay">
+										<div class="collection-overlay-inner">
+											<div class="collection-overlay-content">
+												<div class="collection-caption">
+													<h3>Wanda</h3>
+												</div><!--End collection-caption -->
+											</div><!--End collection-overlay-content -->
+										</div><!--End collection-overlay-inner -->
+									</div><!--End collection-overlay -->
+								</div><!--End collection-wrapper -->
+							</div>
+							<div class="col-md-2 col-xs-6 no-space isotopeSelector marvel">
+								<div class="collection-wrapper">
+									<img src="images/collection/136.jpg" alt="collection Title">									
+									<div class="collection-overlay">
+										<div class="collection-overlay-inner">
+											<div class="collection-overlay-content">
+												<div class="collection-caption">
+													<h3>Vision</h3>
+												</div><!--End collection-caption -->
+											</div><!--End collection-overlay-content -->
+										</div><!--End collection-overlay-inner -->
+									</div><!--End collection-overlay -->
+								</div><!--End collection-wrapper -->
+							</div>
+							<div class="col-md-2 col-xs-6 no-space isotopeSelector starwars">
+								<div class="collection-wrapper">
+									<img src="images/collection/137.jpg" alt="collection Title">									
+									<div class="collection-overlay">
+										<div class="collection-overlay-inner">
+											<div class="collection-overlay-content">
+												<div class="collection-caption">
+													<h3>Ahsokaed</h3>
+												</div><!--End collection-caption -->
+											</div><!--End collection-overlay-content -->
+										</div><!--End collection-overlay-inner -->
+									</div><!--End collection-overlay -->
+								</div><!--End collection-wrapper -->
+							</div>
 						</div><!--End isotopeContainer -->
 					</div>	
 				</div>  <!--End col-sm-12 -->  
